--- a/2.1onN-RTC/public/viewer.html
+++ b/2.1onN-RTC/public/viewer.html
@@ -115,7 +115,7 @@
 
   <script>
     const viewerId = Math.random().toString(36).substr(2, 9);
-    const ws = new WebSocket("ws://localhost:8080");
+    const ws = new WebSocket("ws://192.168.0.37:8080");
     const remoteVideo = document.getElementById("remoteVideo");
     const chatInput = document.getElementById("chatInput");
     const chatLog = document.getElementById("chatLog");
