--- a/1.Testing-mock-up/1.client-messaing-test/client.html
+++ b/1.Testing-mock-up/1.client-messaing-test/client.html
@@ -5,7 +5,8 @@
     <button onclick="send()">Send</button>
 
     <script>
-      const ws = new WebSocket("ws://localhost:8080");//브라우저 열면 연결
+      // const ws = new WebSocket("ws://localhost:8080");//브라우저 열면 연결
+      const ws = new WebSocket("ws://192.168.0.37:8080");//브라우저 열면 연결
 
       ws.onopen = () => {// 연결시 로그 메세지
         console.log("Connected to server");
