--- a/2.1onN-RTC/public/sender.html
+++ b/2.1onN-RTC/public/sender.html
@@ -103,7 +103,7 @@
 
   <script>
     const senderId = "sender";
-    const ws = new WebSocket("ws://localhost:8080");
+    const ws = new WebSocket("ws://192.168.0.37:8080");
     const localVideo = document.getElementById("localVideo");
     const chatInput = document.getElementById("chatInput");
     const chatLog = document.getElementById("chatLog");
