--- a/2.1onN-RTC/public/viewer.html
+++ b/2.1onN-RTC/public/viewer.html
@@ -340,7 +340,7 @@
 
   <script>
     const viewerId = Math.random().toString(36).substr(2, 9); // 고유한 수신자 ID
-    const ws = new WebSocket("ws://localhost:8080");
+    const ws = new WebSocket("ws://192.168.0.63:8080");
     const remoteVideo = document.getElementById("remoteVideo");
     const chatInput = document.getElementById("chatInput");
     const chatLog = document.getElementById("chatLog");
