--- a/2.1onN-RTC/public/sender.html
+++ b/2.1onN-RTC/public/sender.html
@@ -210,7 +210,7 @@
 
   <script>
     const senderId = "sender"; // 송신자 고유 ID
-    const ws = new WebSocket("ws://localhost:8080");
+    const ws = new WebSocket("ws://192.168.0.63:8080");
     const testCanvas = document.getElementById("testCanvas");
     const ctx = testCanvas.getContext("2d");
     const hiddenVideo = document.getElementById("hiddenVideo");
